--- a/profile card.html
+++ b/profile card.html
@@ -42,7 +42,9 @@
         border-radius: 24px 24px 0 0;
         height: 36%;
         width: 100%;
-        background-color: #4070f4;
+         background-image: url('https://wallpaperaccess.com/full/1271797.jpg');
+        background-position: center;
+        background-size: cover;
 
     }
     .profile-card .media-buttons{
